--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <h3 data-aos="slide-right"><span>Branch:</span>Computer Science And Engineering</h3>
                 <h3 data-aos="slide-left"><span>Institue:</span>S J C Institue Technology</h3>
                 <h3 data-aos="slide-right"><span>Current Post:</span>Student</h3>
-                <a data-aos="flip-right" href="https://drive.google.com/file/d/1Waji3hMgAvNxClwfn23iAcYrHOB-yWom/view?usp=drivesdk" target="_blank"><button class="btn">My Resume <i
+                <a data-aos="flip-right" href="https://drive.google.com/file/d/1LQwzbXI6fUAUSmkswsYVd07opEK1U9yC/view" target="_blank"><button class="btn">My Resume <i
                             class="fas fa-download"></i></button></a>
             </div>
             <div class="counter">
